# tpProject

./: CMakeLists.txt  FastTyping.cpp  README.md  build.sh  cmake-bash.sh  main  run.sh  text.txt
Header/: ErrorStatistics.h  Speed.h  UserRequest.h
src/: ErrorStatistics.cpp  Speed.cpp  UserRequest.cpp
